--- a/timerbar/privacy.html
+++ b/timerbar/privacy.html
@@ -137,9 +137,12 @@
         <!-- <p>Address: [Your Optional Physical Address]</p> -->
 
         <footer>
-             <!-- Optional: Link back to Marketing Page or Support -->
-             <p><a href="index.html">Website</a> | <a href="support.html">Support</a></p>
-             <p>© 2025 asdftq. All rights reserved.</p>
+            <a href="support.html">Support</a>
+            <a href="privacy.html">Privacy Policy</a>
+            <a href="terms.html">Terms of Service</a>
+            <!-- Optional: Add Terms of Service link if you have one -->
+            <!-- <a href="terms.html">Terms of Service</a> -->
+            <p>© 2025 asdftq. All rights reserved.</p>
         </footer>
     </div>
 </body>
