--- a/timerbar/index.html
+++ b/timerbar/index.html
@@ -155,6 +155,7 @@
     <footer>
         <a href="support.html">Support</a>
         <a href="privacy.html">Privacy Policy</a>
+        <a href="terms.html">Terms of Service</a>
         <!-- Optional: Add Terms of Service link if you have one -->
         <!-- <a href="terms.html">Terms of Service</a> -->
         <p>© 2025 asdftq. All rights reserved.</p>
