--- a/timerbar/terms.html
+++ b/timerbar/terms.html
@@ -76,8 +76,8 @@
         <h2>2. License to Use the App</h2>
         <p>We grant you a limited, non-exclusive, non-transferable, revocable license to use the App for your personal, non-commercial purposes, subject to these Terms.</p>
 
-        <h2>3. Subscription Services (TimerBar Pro)</h2>
-        <p>The App may offer enhanced features or functionality through automatically renewing subscription services ("Subscriptions"), referred to as "TimerBar Pro".</p>
+        <h2>3. Subscription Services (TimerBar+ Pro)</h2>
+        <p>The App may offer enhanced features or functionality through automatically renewing subscription services ("Subscriptions"), referred to as "TimerBar+ Pro".</p>
         <ul>
             <li><strong>Billing:</strong> Subscriptions are billed in advance on a recurring basis (e.g., monthly, yearly) through your Apple App Store account. Payment will be charged to your App Store account at confirmation of purchase.</li>
             <li><strong>Renewal:</strong> Your Subscription automatically renews unless auto-renew is turned off at least 24 hours before the end of the current subscription period. Your account will be charged for renewal within 24 hours prior to the end of the current period.</li>
