--- a/timerbar/index.html
+++ b/timerbar/index.html
@@ -139,7 +139,7 @@
         -->
 
         <section class="section" style="text-align: center;">
-            <h2>Get TimerBar Today!</h2>
+            <h2>Get TimerBar+ Today!</h2>
             <p>Download TimerBar+ now and start tracking presentations.</p>
             <!-- Link to your App Store page -->
             <a href="https://apps.apple.com/us/app/id6744717499" class="app-store-badge" target="_blank">
