feat: update docs

--- a/JetLagBye/index.html
+++ b/JetLagBye/index.html
@@ -179,25 +179,17 @@
 
         <section class="section">
             <h2>Pricing</h2>
-            <div class="pricing-grid">
-                <div class="pricing-card">
-                    <h3>Free</h3>
-                    <p class="price">$0</p>
-                    <ul style="list-style: none; padding: 0;">
-                        <li>✓ 1 free jet lag plan</li>
-                        <li>✓ Basic recommendations</li>
-                        <li>✓ Core features</li>
-                    </ul>
-                </div>
+            <div style="max-width: 400px; margin: 0 auto;">
                 <div class="pricing-card pro">
-                    <h3>Pro</h3>
+                    <h3>Jet Lag Bye Pro</h3>
                     <p class="price">$1.99/mo</p>
                     <p style="font-size: 0.9em; color: #666;">or $14.99/year (save 37%)</p>
                     <ul style="list-style: none; padding: 0;">
-                        <li>✓ Unlimited plans</li>
+                        <li>✓ Unlimited jet lag plans</li>
                         <li>✓ Round trip support</li>
                         <li>✓ Notification reminders</li>
                         <li>✓ Trip history</li>
+                        <li>✓ Science-based recommendations</li>
                         <li>✓ Priority support</li>
                     </ul>
                     <p style="font-weight: bold; color: #667eea;">7-day free trial</p>
