--- a/JetLagBye/support.html
+++ b/JetLagBye/support.html
@@ -106,8 +106,8 @@
         </div>
 
         <div class="faq-item">
-            <strong>Q: What's the difference between Free and Pro?</strong>
-            The free version allows you to generate one jet lag plan to try the app. Pro subscription ($1.99/month or $14.99/year) provides unlimited plans, round trip support, notification reminders, and trip history storage. New users get a 7-day free trial.
+            <strong>Q: How much does Jet Lag Bye cost?</strong>
+            Jet Lag Bye Pro is available for $1.99/month or $14.99/year (save 37%). The subscription includes unlimited jet lag plans, round trip support, notification reminders, trip history storage, and priority support. New users get a 7-day free trial to test all features.
         </div>
 
         <div class="faq-item">
