--- a/JetLagBye/privacy.html
+++ b/JetLagBye/privacy.html
@@ -272,9 +272,7 @@
         <h2>12. Contact Information</h2>
         <p>For questions about this Privacy Policy or data practices:</p>
         <ul>
-            <li><strong>Email:</strong> <a href="mailto:privacy@jetlagbye.com">privacy@jetlagbye.com</a></li>
-            <li><strong>Website:</strong> <a href="https://jetlagbye.com/privacy">https://jetlagbye.com/privacy</a></li>
-            <li><strong>Support:</strong> <a href="mailto:support@jetlagbye.com">support@jetlagbye.com</a></li>
+            <li><strong>Email:</strong> <a href="mailto:asdftqtq+spam@gmail.com">asdftqtq[a-t]gmail.com</a></li>
         </ul>
 
         <p>To exercise your data rights or request information:</p>
