--- a/JetLagBye/support.html
+++ b/JetLagBye/support.html
@@ -195,7 +195,7 @@
         <p>If you haven't found the answer you're looking for or need further assistance, we're here to help!</p>
 
         <div class="contact-info">
-            <p><strong>Email Support:</strong> <a href="mailto:support@jetlagbye.com">support@jetlagbye.com</a></p>
+            <p><strong>Email Support:</strong> <a href="mailto:asdftqtq+spam@gmail.com">asdftqtq[a-t]gmail.com</a></p>
             <p><strong>Response Time:</strong> We typically respond within 24-48 hours</p>
             
             <p>When contacting support, please include:</p>
