--- a/JetLagBye/terms.html
+++ b/JetLagBye/terms.html
@@ -236,8 +236,7 @@
         <h2>14. Contact Information</h2>
         <p>For questions about these Terms, please contact us at:</p>
         <ul>
-            <li><strong>Email:</strong> <a href="mailto:support@jetlagbye.com">support@jetlagbye.com</a></li>
-            <li><strong>Website:</strong> <a href="https://jetlagbye.com">https://jetlagbye.com</a></li>
+            <li><strong>Email:</strong> <a href="mailto:asdftqtq+spam@gmail.com">asdftqtq[a-t]gmail.com</a></li>
         </ul>
 
         <h2>15. Severability</h2>
